# dimensional-rs

./: Cargo.toml  README.md
benches/: intersections_2d.rs
src/: airfoil.rs  algorithms.rs  closed_polyline.rs  errors.rs  geometry.rs  intersections.rs  lib.rs  serialize.rs
src/airfoil/: analyze.rs  common.rs  edges.rs  generate.rs
src/airfoil/test_data/: generated_airfoil_0.json
src/geometry/: aabb2.rs  common.rs  curve2.rs  distances2.rs  line2.rs  partitioning.rs  polyline.rs  polyline_intersections.rs  shapes2.rs
src/geometry/test_data/: naca.txt
src/intersections/: aabb2.rs  distances2.rs
