[package]
name = "dimensional-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncollide2d = "0.33"
serde = {version ="1.0", features=["derive"]}
serde_json = "1.0"
itertools = "0.10.5"

[dev-dependencies]
test-case = "3.0"
approx = "0.5.1"
criterion = "0.4.0"

[[bench]]
name = "intersections_2d"
harness = false